[tool.poetry]
name = "docrunner"
version = "0.1.0"
description = ""
authors = ["DudeBro249 <yoayush@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
docrunner = "docrunner.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
