[tool.poetry]
name = "docrunner"
license = "Apache-2.0"
version = "0.1.5"
description = "A command line tool which allows you to run the code in your markdown files to ensure that readers always have access to working code."
authors = ["DudeBro249 <appdevdeploy@gmail.com>"]
homepage = "https://github.com/DudeBro249/docrunner"
repository = "https://github.com/DudeBro249/docrunner"
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
docrunner = "docrunner.main:app"

[tool.poetry.dependencies]
python = "^3.6.1"
typer = {extras = ["all"], version = "^0.3.2"}
toml = "^0.10.2"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
